--- a/CompanyServices/src/main/resources/application.properties
+++ b/CompanyServices/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8081
 spring.application.name=company-service
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+
+#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
+
 spring.data.mongodb.uri=mongodb://felicia:abc123@localhost:27017/admin
 spring.data.mongodb.auto-index-creation= true
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration 
