--- a/StockServices/src/main/resources/application.properties
+++ b/StockServices/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8082
 spring.application.name=stock-service
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-
+#EC2
+#eureka.client.serviceUrl.defaultZone= https://ec2-3-87-217-134.compute-1.amazonaws.com:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
